--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 								<h2 class="major">Contact</h2>
 									<ul class="icons">
 									<a class="icon fa-whatsapp"><li>+919633290249</li> <p>Feel Free To Ping</p></a>
+									<a class= "fa fa-wpforms" href = dsf.html><p>Click here to text us</p> </a><br></br>
 									<li><a href="https://github.com/ashikv-dev" class="icon fa-github"><span class="label">GitHub</span></a></li>
 									<p>Catch Us On GitHub</p>
 								</ul>
