--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
-								<h5>Under Contruction</h5>
+						<i class="fa fa-circle-o-notch" aria-hidden="true"></i>
+								<h5>Site Under Contruction Not Ready for Pentesting</h5>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1 style="font-family:Georgia, 'Times New Roman', Times, serif;">DEV LABS</h1>
 								<p><!--[-->Listen, Create and Provide Authentic Services</p>
+								<p>FOR ALL YOUR WEBSITE AND ANDROID APP NEEDS</p>
 							</div>
 						</div>
 						<nav>
@@ -70,7 +71,8 @@
 								text-align: justify;
 								letter-spacing: 3px;">We are a team of highly motivated devs and dev labs is the genesis from which our journey begins. The team includes geeks, enthusiasts and 
 									hobiyists who are united by our love towards coding, designing and innovating. we are driven to explore new diamensions and scopes in this 
-									platform. </p>
+								       platform. </p>
+								       <a class= "fa fa-wpforms" href = dsf.html>Click here to Leave a Message </a></li><br></br>
 							</article>
 
 						<!-- Contact -->
@@ -78,7 +80,7 @@
 								<h2 class="major">Contact</h2>
 									<ul class="icons">
 									<a class="icon fa-whatsapp"><li>+919633290249</li> <p>Feel Free To Ping</p></a>
-									<a class= "fa fa-wpforms" href = dsf.html><p>Click here to text us</p> </a><br></br>
+									<a class= "fa fa-comment" href = dsf.html>Click here to Leave a Message </a></li><br></br>
 									<li><a href="https://github.com/ashikv-dev" class="icon fa-github"><span class="label">GitHub</span></a></li>
 									<p>Catch Us On GitHub</p>
 								</ul>
