--- a/dsf.html
+++ b/dsf.html
@@ -17,17 +17,19 @@
           
           <div class="column">
             <form id="submit-form" action="">
-              <label for="fname">First Name</label>
+              <label for="fname">Name</label>
               <input type="text" id="fname" name="name" placeholder="Your name..">
               <label for="lname">Email</label>
-              <input type="text" id="lname" name="email" placeholder="Your last name..">
+              <input type="text" id="lname" name="email" placeholder="Your Email ID..">
               <label for="country">Country</label>
               <select id="country" name="color">
                 <option value="India">India</option>
                 <option value="Other">Other</option>
                </select>
+              <label for="phone">Mobile Number(With Country Code)</label>
+              <input type="text" id="phone" name="phone" placeholder="+91-xxxxxxxxxx"><br></br>
               <label for="subject">Subject</label>
-              <textarea id="subject" name="message" placeholder="Write something.." style="height:170px"></textarea>
+              <textarea id="subject" name="message" placeholder="Type your message here.." style="height:170px"></textarea>
               <input type="submit" value="Submit">
             </form>
           </div>
