--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<header id="header">
 						<div class="logo">
 						<i class="fa fa-circle-o-notch" aria-hidden="true"></i>
-								<h5>Site Under Contruction Not Ready for Pentesting</h5>
+								
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -330,7 +330,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; All Right Reserved. Design: dev LABS</a>.</p>
+					<p class="copyright">&copy; All Right Reserved. Design: dev LABS<br>Site Under Construction Not Ready for Pentesting</a>.</p>
 					</footer>
 
 			</div>
