--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									specifications. Our clients can rest assured of the security and maintanance as our team will handle it.</a></p>
 								<p style="text-indent: 50px;
 								text-align: justify;
-								letter-spacing: 3px;">Dev workss to ensure that the solution is deployed with the right products, future-proofed with the right architecture, and implemented with our best practices. We manage the projects through the full life cycle, ensuring that they meet required service levels and provide headroom for future growth once they enter production or services.</p>
+								letter-spacing: 3px;">Dev works to ensure that the solution is deployed with the right products, future-proofed with the right architecture, and implemented with our best practices. We manage the projects through the full life cycle, ensuring that they meet required service levels and provide headroom for future growth once they enter production or services.</p>
 							</article>
 
 						<!-- works -->
@@ -60,7 +60,8 @@
 								<a href="devone/index.html"
 								<p><img src="images/devone.png" alt="devONE" width=150px height=50px></p></a>
 								<p style="<button class="buttonload">
-									<i class="fa fa-spinner fa-spin"></i>MORE PROJECTS ARE COMING SOON
+									<i class="fa fa-spinner fa-spin"></i>MORE PROJECTS ARE COMING SOON<br>
+									CONTACT US FOR MORE DEMO
 								  </button></p>
 							</article>
 
